[metadata]
description-file = README.md
name = SMOK
version = 0.1a1
license = MIT License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: POSIX :: Linux
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
description = The API module for all things SMOK
author = SMOK sp. z o.o.
author_email = pmaslanka@smok.co
url = https://github.com/smok-serwis/smok

[pycodestyle]
max-line-length=100

[bdist_wheel]
universal=1

[nosetests]
verbosity=1
detailed-errors=1
with-coverage=1